--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "description": "maroKanataniの職務経歴書",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:pdf": "md-to-pdf docs/README.md --config-file ./pdf-configs/config.js"
   },
   "repository": {
     "type": "git",
     "url": "git@github.com:maroKanatani/resume.git"
   },
-  "author": ""
+  "author": "maroKanatani <16130443+Kanatani28@users.noreply.github.com>",
+  "dependencies": {
+    "md-to-pdf": "5.2.4"
+  }
 }
