--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "maroKanataniの職務経歴書",
   "scripts": {
-    "build:pdf": "md-to-pdf docs/README.md --config-file ./pdf-configs/config.js"
+    "build:pdf": "md-to-pdf docs/README.md --config-file ./pdf-configs/config.js",
+    "lint": "textlint docs/README.md"
   },
   "repository": {
     "type": "git",
@@ -11,6 +12,27 @@
   },
   "author": "maroKanatani <16130443+Kanatani28@users.noreply.github.com>",
   "devDependencies": {
-    "md-to-pdf": "5.2.4"
+    "@textlint-ja/textlint-rule-no-insert-dropping-sa": "2.0.1",
+    "husky": "8.0.3",
+    "md-to-pdf": "5.2.4",
+    "textlint": "13.3.2",
+    "textlint-filter-rule-comments": "1.2.2",
+    "textlint-filter-rule-whitelist": "2.0.0",
+    "textlint-rule-abbr-within-parentheses": "1.0.2",
+    "textlint-rule-footnote-order": "1.0.3",
+    "textlint-rule-general-novel-style-ja": "1.3.0",
+    "textlint-rule-ja-hiragana-fukushi": "1.3.0",
+    "textlint-rule-ja-hiragana-hojodoushi": "1.1.0",
+    "textlint-rule-ja-hiragana-keishikimeishi": "1.1.0",
+    "textlint-rule-ja-unnatural-alphabet": "2.0.1",
+    "textlint-rule-ng-word": "1.0.0",
+    "textlint-rule-no-mixed-zenkaku-and-hankaku-alphabet": "1.0.1",
+    "textlint-rule-period-in-list-item": "1.0.1",
+    "textlint-rule-prefer-tari-tari": "1.0.3",
+    "textlint-rule-preset-ja-spacing": "2.3.0",
+    "textlint-rule-preset-ja-technical-writing": "7.0.0",
+    "textlint-rule-preset-jtf-style": "2.3.13",
+    "textlint-rule-prh": "5.3.0",
+    "textlint-rule-spellcheck-tech-word": "5.0.0"
   }
 }
