--- a/.github/workflows/lint-text.yml
+++ b/.github/workflows/lint-text.yml
@@ -1,13 +1,13 @@
 name: lint text
 
-on: [push]
+on: [push, workflow_dispatch]
 
 jobs:
   build:
     name: lint text
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
       - uses: ./.github/actions/cache-node-modules
         id: cache-node-modules
