chore: add concurrency to lint-text

--- a/.github/workflows/lint-text.yml
+++ b/.github/workflows/lint-text.yml
@@ -2,6 +2,10 @@ name: lint text
 
 on: [push, workflow_dispatch]
 
+concurrency:
+  group: ${{ github.workflow }}
+  cancel-in-progress: true
+
 jobs:
   build:
     name: lint text
