--- a/.github/workflows/create-release-draft.yml
+++ b/.github/workflows/create-release-draft.yml
@@ -22,16 +22,24 @@ jobs:
       - name: build pdf
         run: npm run build:pdf
       - uses: release-drafter/release-drafter@v5
-        id: release-drafter
+        id: release_drafter
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # see https://github.com/release-drafter/release-drafter/issues/900
       - name: Upload Release Asset
-        id: upload-release-asset 
-        uses: actions/upload-release-asset@v1
+        run: |
+          gh release upload --clobber ${{ env.VERSION }} ${{ env.FILES }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.release-drafter.outputs.upload_url }}
-          asset_path: ./docs/README.pdf
-          asset_name: resume.pdf
-          asset_content_type: application/pdf
+          VERSION: ${{ steps.release_drafter.outputs.tag_name }}
+          FILES: ./docs/README.pdf
+      # - name: Upload Release Asset
+      #   id: upload-release-asset 
+      #   uses: actions/upload-release-asset@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     asset_path: ./docs/README.pdf
+      #     asset_name: resume.pdf
+      #     asset_content_type: application/pdf
+      #     upload_url: ${{ steps.release-drafter.outputs.upload_url }}
