--- a/.github/workflows/create-release-draft.yml
+++ b/.github/workflows/create-release-draft.yml
@@ -14,13 +14,19 @@ jobs:
   update_release_draft:
     runs-on: ubuntu-latest
     timeout-minutes: 5
-
+    env:
+      PDF_FILE: docs/職務経歴書.pdf
+      OUTPUT_ZIP: docs/resume.zip
+      # TODO secretsを使う
+      PASSWORD: test
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
       - run: npm ci
       - name: build pdf
         run: npm run build:pdf
+      - name: Create zip
+        run: zip --encrypt --password ${{ env.PASSWORD }} -j ${{ env.OUTPUT_ZIP }} ${{ env.PDF_FILE }}
       - uses: release-drafter/release-drafter@v5
         id: release_drafter
         env:
@@ -32,4 +38,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VERSION: ${{ steps.release_drafter.outputs.tag_name }}
-          FILES: ./docs/README.pdf
+          FILES: ${{ env.OUTPUT_ZIP }}
