--- a/.github/workflows/create-release-draft.yml
+++ b/.github/workflows/create-release-draft.yml
@@ -10,6 +10,10 @@ concurrency:
   group: ${{ github.workflow }}
   cancel-in-progress: true
 
+# TODO setup aws
+# env:
+#   RESUME_IAM_ROLE_ARN: ${{ secrets.RESUME_IAM_ROLE_ARN }}
+
 jobs:
   update_release_draft:
     runs-on: ubuntu-latest
